v1.5.0-Resolve-Issues